[gd_scene load_steps=14 format=2]

[ext_resource path="res://story/story2_clear.jpg" type="Texture" id=1]
[ext_resource path="res://Fonts/ArchitectsDaughter.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/levels/story2.gd" type="Script" id=3]
[ext_resource path="res://Music/chime-sound-7143.mp3" type="AudioStream" id=4]
[ext_resource path="res://Coin+button arrow/shadedDark24 - Copy.png" type="Texture" id=5]
[ext_resource path="res://Coin+button arrow/shadedLight24.png" type="Texture" id=6]
[ext_resource path="res://src/levels/bg_scene.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 23
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.686275, 0.443137, 0.776471, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.815686, 0.72549, 0.917647, 1 )
border_color = Color( 0.717647, 0.0470588, 0.694118, 1 )

[sub_resource type="DynamicFont" id=4]
size = 23
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.950684, 0.553328, 0.553328, 1 )
border_color = Color( 0.831373, 0.619608, 0.619608, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 0.823529, 0.823529, 1 )

[node name="Control" type="Control"]
anchor_right = 1.037
anchor_bottom = 1.048
margin_left = -1.0
margin_right = -3.88806
margin_bottom = 1.19995
script = ExtResource( 3 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 513, 300 )
scale = Vector2( 0.709722, 0.739506 )
texture = ExtResource( 1 )

[node name="Prev" type="Button" parent="."]
visible = false
margin_left = 358.0
margin_top = 543.0
margin_right = 486.0
margin_bottom = 583.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
shortcut_in_tooltip = false
text = "Prev"

[node name="Go" type="Button" parent="."]
margin_left = 862.0
margin_top = 554.0
margin_right = 974.0
margin_bottom = 594.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/hover = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
toggle_mode = true
shortcut_in_tooltip = false
text = "Go"

[node name="chime" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="prev" type="TextureButton" parent="."]
margin_left = 957.0
margin_top = 20.0
margin_right = 1006.0
margin_bottom = 67.0
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true

[node name="Background music" parent="." instance=ExtResource( 7 )]

[connection signal="mouse_entered" from="Prev" to="." method="_on_Prev_mouse_entered"]
[connection signal="mouse_exited" from="Prev" to="." method="_on_Prev_mouse_exited"]
[connection signal="pressed" from="Prev" to="." method="_on_Prev_pressed"]
[connection signal="mouse_entered" from="Go" to="." method="_on_Go_mouse_entered"]
[connection signal="mouse_exited" from="Go" to="." method="_on_Go_mouse_exited"]
[connection signal="pressed" from="Go" to="." method="_on_Go_pressed"]
[connection signal="mouse_entered" from="prev" to="." method="_on_prev_mouse_entered"]
[connection signal="mouse_exited" from="prev" to="." method="_on_prev_mouse_exited"]
[connection signal="pressed" from="prev" to="." method="_on_prev_pressed"]
